--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          with:java-version: '17'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Build with Maven
