--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '8'
-          distribution: 'temurin' 
+          java-version: '17'
+          distribution: 'zulu' 
 
       - name: Build with Maven
         run: mvn clean install  
